data/derived/comb/progs/unify/prog2467.ml.out
Characters 39-66:
  mulByDigit (i-1) bigAdd l l
  ^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a but an expression was expected of type
         (int list -> int list -> int list) ->
         (int list -> int list -> int list) -> 'a
       The type variable 'a occurs inside
       (int list -> int list -> int list) ->
       (int list -> int list -> int list) -> 'a
